ms-catalog-zecore/base/deployment-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-catalog-zecore-celery
  annotations:
    configmap.reloader.stakater.com/reload: "ms-catalog-zecore"
    secret.reloader.stakater.com/reload: "ms-catalog-zecore"
  name: ms-catalog-zecore-celery
  namespace: client
spec:
  selector:
    matchLabels:
      app: ms-catalog-zecore-celery
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ms-catalog-zecore-celery
    spec:
      containers:
        - name: celery-worker
          image: luuna/ms-catalog-zecore:latest
          imagePullPolicy: Always
          command:
            - "/bin/sh"
          args:
            - "-c"
            - "yarn start:worker"
          volumeMounts:
            - mountPath: /tmp
              name: cache
              readOnly: false
            - mountPath: /.cache
              name: cache
              readOnly: false
            - mountPath: /.yarn
              name: cache
              readOnly: false
          resources:
            requests:
              memory: "200Mi"
              cpu: "250m"
            limits:
              memory: "450Mi"
              cpu: "500m"
          #livenessProbe:
          #  httpGet:
          #    path: /health
          #    port: 3000
          #    scheme: HTTP
          #  initialDelaySeconds: 30
          #  periodSeconds: 15
          #  failureThreshold: 1
          #  successThreshold: 1
          #  timeoutSeconds: 5
          #readinessProbe:
          #  httpGet:
          #    path: /health
          #    port: 3000
          #    scheme: HTTP
          #  initialDelaySeconds: 15
          #  periodSeconds: 30
          #  failureThreshold: 1
          #  successThreshold: 1
          #  timeoutSeconds: 15
          securityContext:
            runAsUser: 0
      enableServiceLinks: true
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        purpose: backend
      volumes:
        - emptyDir: {}
          name: cache
      restartPolicy: Always
      serviceAccount: ms-catalog-zecore
      serviceAccountName: ms-catalog-zecore
