ms-catalog-zecore/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ms-catalog-zecore
  namespace: client
spec:
  podSelector:
    matchLabels:
      app: ms-catalog-zecore
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ms-catalog-zecore
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 27017
